# cycling_power_estimator

./: Outdoor_cycling.gpx  PLAN.md  PROJECT_OUTLINE.md  Zepp20260607143852.gpx  docker-compose.yml  logo_long
backend/: Dockerfile  investigate.py  investigate2.py  pyproject.toml
backend/app/: cli.py  main.py
backend/app/api/: analyze.py
backend/app/physics/: __init__.py  constants.py  gpx_parser.py  metrics.py  pipeline.py
backend/cycling_power_estimator.egg-info/: SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_metrics.py  test_parser.py  test_pipeline.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json
frontend/public/: site.webmanifest
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: Histograms.jsx  RideChart.jsx  RideHeader.jsx  StatsSummary.jsx  UploadForm.jsx
