[project]
name = "cycling-power-estimator"
version = "0.1.0"
description = "Estimate cycling power output from GPX track data"
requires-python = ">=3.10"
dependencies = [
    "gpxpy>=1.6",
    "pandas>=2.0",
    "numpy>=1.24",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
